--- a/style.css
+++ b/style.css
@@ -1,14 +1,15 @@
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 body {
     background-color: rgb(220, 255, 255);
     scroll-behavior: smooth;
     font-family: Arial, sans-serif;
     font-size: 16px;
-    margin: 0;
-    padding: 0;
-}
-
-* {
-    box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
@@ -22,6 +23,10 @@ body {
     background-color: black;
     padding: 10px;
     max-width: 100%;
+}
+
+ul {
+    display: flex;
 }
 
 .nav__item {
@@ -41,6 +46,7 @@ body {
     text-decoration: none;
     color: white;
     font-size: 18px;
+    list-style-type: none;
 }
 
 @keyframes moverImagem {
@@ -114,11 +120,17 @@ h2 {
 
 @media (max-width: 768px) {
     .menu {
+        display: flex;
         flex-direction: column;
         align-items: center;
         gap: 10px;
+        height: auto;
     }
 
+    ul {
+        display: flex;
+        flex-direction: column;
+    }
     .conteudo-section {
         width: 100%;
         padding: 15px;
