--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ ul {
     gap: 30px;
 }
 
+
 .nav__item {
     padding: 5px 10px;
     cursor: pointer;
@@ -99,6 +100,7 @@ ul {
     max-width: 600px;
     width: 100%;
     border: 2px solid black;
+    border-radius: 4px;
     padding: 20px;
     margin-top: 20px;
     background-color: #f9f9f9;
@@ -120,6 +122,7 @@ h2 {
 /* home fixo no topo */
 
 .home_nuga {
+    list-style-type: none;
     position: fixed;
     top: 10px;
     left: 20px;
